--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,18 +11,15 @@
   <tbody>
     <% for (const id in urlDatabase) { %>
       <tr>
-        <td><%= id %></td>
-        <td><%= urlDatabase[id] %></td>
-        <td>
-          <!-- View Link -->
-          <a href="/urls/<%= id %>">View</a>
-
-          <!-- Delete Form -->
-          <form method="POST" action="/urls/<%= id %>/delete" style="display:inline;">
-            <button type="submit">Delete</button>
-          </form>
-        </td>
-      </tr>
+  <td><%= id %></td>
+  <td><%= urlDatabase[id] %></td>
+  <td>
+    <a href="/urls/<%= id %>">Edit</a>
+    <form method="POST" action="/urls/<%= id %>/delete" style="display:inline;">
+      <input type="submit" value="Delete">
+    </form>
+  </td>
+</tr>
     <% } %>
   </tbody>
 </table>
