--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,13 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+       <form method="POST" action="/login" style="display:inline;">
+  <input type="text" name="username" placeholder="Username" required>
+  <button type="submit">Login</button>
+</form>
+    </div>
+  </nav>
+</header>
     </div>
   </nav>
 </header>
