--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,25 +1,16 @@
-<h1>My URLs</h1>
+<header>
+  <% if (username) { %>
+    <p>Logged in as: <%= username %></p>
+  <% } else { %>
+    <p>Not logged in</p>
+  <% } %>
+</header>
 
-<table>
-  <thead>
-    <tr>
-      <th>Short URL</th>
-      <th>Long URL</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% for (const id in urlDatabase) { %>
-      <tr>
-  <td><%= id %></td>
-  <td><%= urlDatabase[id] %></td>
-  <td>
-    <a href="/urls/<%= id %>">Edit</a>
-    <form method="POST" action="/urls/<%= id %>/delete" style="display:inline;">
-      <input type="submit" value="Delete">
-    </form>
-  </td>
-</tr>
-    <% } %>
-  </tbody>
-</table>
+<h2>My URLs</h2>
+<ul>
+  <% for (let shortURL in urls) { %>
+    <li>
+      <%= shortURL %>: <%= urls[shortURL] %>
+    </li>
+  <% } %>
+</ul>
