--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,17 +13,22 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav mr-auto">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-       <form method="POST" action="/login" style="display:inline;">
-  <input type="text" name="username" placeholder="Username" required>
-  <button type="submit">Login</button>
-</form>
-    </div>
-  </nav>
-</header>
+
+      <% if (username) { %>
+        <span class="navbar-text text-white mr-3">Logged in as: <%= username %></span>
+        <form method="POST" action="/logout" class="form-inline" style="display:inline;">
+          <button class="btn btn-light" type="submit">Logout</button>
+        </form>
+      <% } else { %>
+        <form method="POST" action="/login" class="form-inline">
+          <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+          <button class="btn btn-light" type="submit">Login</button>
+        </form>
+      <% } %>
     </div>
   </nav>
 </header>
