--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,16 +1,34 @@
 <header>
-  <% if (username) { %>
-    <p>Logged in as: <%= username %></p>
-  <% } else { %>
-    <p>Not logged in</p>
-  <% } %>
-</header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav mr-auto">
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      </div>
 
-<h2>My URLs</h2>
-<ul>
-  <% for (let shortURL in urls) { %>
-    <li>
-      <%= shortURL %>: <%= urls[shortURL] %>
-    </li>
-  <% } %>
-</ul>
+      <% if (username) { %>
+        <span class="navbar-text text-white mr-3">Logged in as: <%= username %></span>
+        <form method="POST" action="/logout" class="form-inline" style="display:inline;">
+          <button class="btn btn-light" type="submit">Logout</button>
+        </form>
+      <% } else { %>
+        <form method="POST" action="/login" class="form-inline">
+          <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+          <button class="btn btn-light" type="submit">Login</button>
+        </form>
+      <% } %>
+    </div>
+  </nav>
+</header>
